--- a/package.json
+++ b/package.json
@@ -5,17 +5,26 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "19.8.14",
     "@nx/eslint-plugin": "19.8.14",
     "@nx/jest": "19.8.14",
     "@nx/js": "19.8.14",
+    "@nx/nest": "^19.8.14",
+    "@nx/node": "19.8.14",
     "@nx/react": "19.8.14",
     "@nx/web": "19.8.14",
     "@nx/webpack": "19.8.14",
@@ -40,6 +49,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "nest": "^0.1.6",
     "nx": "19.8.14",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
